feat: :sparkles: Creacion de los cruds de las diferentes tablas de la BD de Campuslands
se crea las direcciones y cruds para hacer la manipulacion de datos

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,14 @@
     "description": "Comporser para la creacion de rutas y coneccion de archivos para el manejo de cruds",
     "autoload": {
         "psr-4": {
-            "Juanj\\PruebaPhp\\": "src/"
+            "App\\": [
+                "./scripts",
+                "./scripts/db",
+                "./scripts/campers",
+                "./scripts/departamento",
+                "./scripts/pais",
+                "./scripts/region"
+            ]
         }
     },
     "authors": [
